Fixed the send button, it was barely visible at the bottom of the page

--- a/client/components/settings/settingBody.styl
+++ b/client/components/settings/settingBody.styl
@@ -6,6 +6,9 @@
   display: -ms-flexbox
   display: flex
 
+.settings-invite
+  margin-bottom: 2.5%;
+
 .setting-content
   padding 30px
   color: #727479
